test/tasty/neg/src-2/IllegalTraitParams.check
IllegalTraitParams_fail.scala:3: error: Unsupported Scala 3 parameterized trait Foo(a); found in object tastytest.TraitParams.
class Illegal extends TraitParams.Foo("?")
              ^
IllegalTraitParams_fail.scala:3: error: trait Foo is a trait; does not take constructor arguments
class Illegal extends TraitParams.Foo("?")
                      ^
IllegalTraitParams_fail.scala:4: error: Unsupported Scala 3 parameterized trait Bar(x, y); found in object tastytest.TraitParams.
class IllegalMulti extends TraitParams.Bar(0, "")
                   ^
IllegalTraitParams_fail.scala:4: error: trait Bar is a trait; does not take constructor arguments
class IllegalMulti extends TraitParams.Bar(0, "")
                           ^
IllegalTraitParams_fail.scala:5: error: Unsupported Scala 3 parameterized trait Baz(baz); found in object tastytest.TraitParams.
class IllegalUseParam extends TraitParams.Baz {
                      ^
IllegalTraitParams_fail.scala:6: error: not found: value baz
  def foo = println(baz)
                    ^
IllegalTraitParams_fail.scala:8: error: Unsupported Scala 3 parameterized trait Qux(qux); found in object tastytest.TraitParams.
class IllegalIgnoreParam extends TraitParams.Qux
                         ^
7 errors
